carrsousel plus classe des texte du carrousel

--- a/index.html
+++ b/index.html
@@ -48,9 +48,10 @@
     </section>
     <section>
         <article>
-            <h3>Venez découvrir ces œuvres </h3>
+            <h3 class="intertitre-carrousel">Venez découvrir ces œuvres </h3>
             <article>
-                <p> Un petit avant goût de ces créations</p>
+            <section class="section__marrons">
+                <p class="texte-carrousel"> Un petit avant goût de ces créations</p>
             </article>
             <div class="carrousel"  x-data="{
                 hrefCourant: '#ecran-1',
@@ -75,54 +76,55 @@
                     <div class="carrousel_ecran" >
                         <figure>
                             <img src="/public/img/Oeuvres/oeuvres5.webp" alt="maison">
-                            <figcaption>Crescent House</figcaption>
+                            <figcaption class="nom-carrousel">Crescent House</figcaption>
                         </figure>
                     </div>
                     <div class="carrousel_ecran" >
                         <figure>
                             <img src="/public/img/Oeuvres/oeuvres4.webp" alt="centre Ponpidou Metz">
-                            <figcaption> Centre Ponpidou Metz</figcaption>
+                            <figcaption class="nom-carrousel"> Centre Ponpidou Metz</figcaption>
                         </figure>
                     </div>
                     <div class="carrousel_ecran">
                         <figure>
                             <img src="/public/img/Oeuvres/oeuvres1.webp" alt="Cardboard Cathedral">
-                            <figcaption>Cardboard Cathedral</figcaption>
+                            <figcaption class="nom-carrousel">Cardboard Cathedral</figcaption>
                         </figure>
                     </div>
                     <div class="carrousel_ecran">
                         <figure>
                             <img src="public/img/Oeuvres/oeuvres7.webp" alt="Khumjung secondary school ">
-                            <figcaption>Khumjung secondary school </figcaption>
+                            <figcaption class="nom-carrousel">Khumjung secondary school </figcaption>
                         </figure>
                     </div>
                     <div class="carrousel_ecran">
                         <figure>
                             <img src="/public/img/Oeuvres/oeuvres8.webp" alt="Shonai hotel Suiden terrasse spa">
-                            <figcaption>Shonai hotel Suiden terrasse spa</figcaption>
+                            <figcaption class="nom-carrousel">Shonai hotel Suiden terrasse spa</figcaption>
                         </figure>
                     </div>
                     <div class="carrousel_ecran">
                         <figure>
                             <img src="/public/img/Oeuvres/oeuvres6.webp" alt="ZEN Wellness SEINEI">
-                            <figcaption>ZEN Wellness SEINEI</figcaption>
+                            <figcaption class="nom-carrousel">ZEN Wellness SEINEI</figcaption>
                         </figure>
                     </div>
                     <div class="carrousel_ecran">
                         <figure>
                             <img src="/public/img/Oeuvres/oeuvres2.webp" alt="Temporary housing in Marrakesh">
-                            <figcaption>Temporary housing in Marrakesh</figcaption>
+                            <figcaption class="nom-carrousel">Temporary housing in Marrakesh</figcaption>
                         </figure>
                     </div>
                     <div class="carrousel_ecran">
                         <figure>
                             <img src="/public/img/Oeuvres/oeuvres3.webp" alt="Simose">
-                            <figcaption>Simose</figcaption>
+                            <figcaption class="nom-carrousel">Simose</figcaption>
                         </figure>
                     </div>
                 </div>
             </div>
         </article>
+            </section>
         <article>
             <h3>Vous voulez en savoir plus sur comment cet arcitecte révolutionne le monde ? </h3>
             <p>L’exposition est ouverte tout le jours du 13 Avril au 23 Juin 2024</p>
