fin de la section carrousel

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <a href="/infos.html" class="Btn-infos">Tout les jours</a> 
     </section>
     <section class="section section__marrons">
-        <h3 class="architecte-intertitre">Pour présenter un Architect mondialement connue</h3>
+        <h3 class="architecte-intertitre">Pour présenter un Architecte mondialement connu</h3>
         <img src="/public/img/accueil/accueil-3.webp" alt="Image de Shigeru Ban" class="architecte-img">
         <a href="/shigeru-Ban.html" class="Btn-architecte">Shigeru Ban</a>        
     </section>
@@ -50,7 +50,6 @@
         <article>
             <h3 class="intertitre-carrousel">Venez découvrir ces œuvres </h3>
             <article>
-            <section class="section__marrons">
                 <p class="texte-carrousel"> Un petit avant goût de ces créations</p>
             </article>
             <div class="carrousel"  x-data="{
@@ -124,7 +123,8 @@
                 </div>
             </div>
         </article>
-            </section>
+        </section>
+    <section>
         <article>
             <h3>Vous voulez en savoir plus sur comment cet arcitecte révolutionne le monde ? </h3>
             <p>L’exposition est ouverte tout le jours du 13 Avril au 23 Juin 2024</p>
