création des classe et des pages

--- a/index.html
+++ b/index.html
@@ -124,11 +124,11 @@
             </div>
         </article>
         </section>
-    <section>
+    <section class="section" >
         <article>
-            <h3>Vous voulez en savoir plus sur comment cet arcitecte révolutionne le monde ? </h3>
-            <p>L’exposition est ouverte tout le jours du 13 Avril au 23 Juin 2024</p>
-            <a  href="/index.html"> Accueil </a>
+            <h3 class="billetterie__titre" >Vous voulez en savoir plus sur comment cet arcitecte révolutionne le monde ? </h3>
+            <p class="billetterie__texte">L’exposition est ouverte tout le jours du 13 Avril au 23 Juin 2024</p>
+            <a  href="/index.html"> Billetterie </a>
             <cite>Cette exposition sur Shigeru Ban offre une plongée unique dans l'innovation architecturale et la durabilité. Découvrez comment chaque structure raconte une histoire captivante où créativité et responsabilité environnementale convergent.</cite>
         </article>
     </section>
