--- a/index.html
+++ b/index.html
@@ -133,9 +133,9 @@
             <cite class="citation">Cette exposition sur Shigeru Ban offre une plongée unique dans l'innovation architecturale et la durabilité. Découvrez comment chaque structure raconte une histoire captivante où créativité et responsabilité environnementale convergent.</cite>
         </article>
     </section>
-    <section>
-        <h2>Contactez Nous</h2>
-        <p> Vous pouvez nous contacter si vous avez besoin d'aide ou de renseignements.</p>
+    <section class="section__marrons">
+        <h2 class="contact__Titre">Contactez Nous</h2>
+        <p class="contact__texte"> Vous pouvez nous contacter si vous avez besoin d'aide ou de renseignements.</p>
         <form action="#">
             <div>
               <label for="Prénom" >Prénom</label>
