--- a/index.html
+++ b/index.html
@@ -138,18 +138,18 @@
         <p class="contact__texte"> Vous pouvez nous contacter si vous avez besoin d'aide ou de renseignements.</p>
         <form action="#">
             <div>
-              <label for="Prénom" >Prénom</label>
+              <label for="Prénom" class="contact__formulaire">Prénom</label>
               <input type="text" name="Prénom" id="Prénom">
             </div>
             <div>
-              <label for="Nom" >Nom</label>
+              <label for="Nom" class="contact__formulaire" >Nom</label>
               <input type="text" name="Nom" id="Nom">
             </div>
             <div>
-              <label for="message">Message</label>
+              <label for="message" class="contact__formulaire">Message</label>
               <textarea id="message" name="message" rows="5"></textarea>
             </div>
-            <button type="submit" >Envoyer</button>
+            <button type="submit" class="contact__Btn">Envoyer</button>
           </form>
     </section>
 </main>
