class menu plus page menu

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             </button>
             <nav class="dropdown-content">
                 <ul>
-                    <li><a href="/infos.html" >Infos</a></li>
-                    <li><a href="/billetterie.html" >Billetterie</a></li>
-                    <li><a href="/shigeru-Ban.html" >Shigeru Ban</a></li>
-                    <li><a href="/Oeuvres.html" >Oeuvres</a></li>
+                    <li><a href="/infos.html" class="menu_texte">Infos</a></li>
+                    <li><a href="/billetterie.html" class="menu_texte">Billetterie</a></li>
+                    <li><a href="/shigeru-Ban.html" class="menu_texte" >Shigeru Ban</a></li>
+                    <li><a href="/Oeuvres.html" class="menu_texte">Oeuvres</a></li>
                 </ul>
                 <a href="#menu">
                     <img src="/public/icon/croix-menu-marron.svg" alt="croix-menu-marron" class="close">
