--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <img src="/public/icon/menu-blanc.svg" alt="Menu">
             </button>
             <nav class="dropdown-content">
-                <ul>
+                <ul class="menu">
                     <li><a href="/infos.html" class="menu_texte">Infos</a></li>
                     <li><a href="/billetterie.html" class="menu_texte">Billetterie</a></li>
                     <li><a href="/shigeru-Ban.html" class="menu_texte" >Shigeru Ban</a></li>
