--- a/infos.html
+++ b/infos.html
@@ -23,7 +23,8 @@
         </ul>
     </header>
     <main>
-    <h1>Infos</h1>
+      <section class="section__marrons">
+        <h1 class="infos__titre">Infos</h1>
     <div id="onglets" x-data="{
       ouvert : 1,
      }">
@@ -34,43 +35,44 @@
     </ul>
     <div>
         <div role="tabpanel" x-bind:class="{actif: ouvert === 1}" >
-          <h1>Le Lieu</h1>
+          <h2 class="infos__intertitre">Le lieu</h2>
           <a href="#"><img src="/public/img/infos.webp" alt="photo montrant le lieu sur une carte"></a>
-          <p>Fondation Cartier, 261 Bd Raspail, 75014 Paris</p>
+          <p class="infos__texte">Fondation Cartier, 261 Bd Raspail, 75014 Paris</p>
         </div>
         <div role="tabpanel" x-bind:class="{actif: ouvert === 2}">
-          <h1>Les Horaires</h1>
-          <p>Lundi : 11:00-20:00
-            Mardi : 11:00-22:00
-            Mercredi : 11:00-20:00
-            Jeudi : 11:00-20:00
-            Vendredi : 11:00-20:00
-            Samedi : 11:00-20:00
-            Dimanche : 11:00-20:00
+          <h2 class="infos__intertitre">Les horaires</h2>
+          <p class="infos__texte">Lundi : 11:00-20:00 <br>
+            Mardi : 11:00-22:00 <br>
+            Mercredi : 11:00-20:00 <br>
+            Jeudi : 11:00-20:00 <br>
+            Vendredi : 11:00-20:00 <br>
+            Samedi : 11:00-20:00 <br>
+            Dimanche : 11:00-20:00 <br>
             La fermeture des salles débute à 19h45 (21h45 les mardis).</p>
         </div>
         <div role="tabpanel" x-bind:class="{actif: ouvert === 3}" >
-          <h1>Les Tarifs</h1>
-          <p>Plein tarif -11€
-            Tarif réduit -7,50€
-            Réduction 13 - 25 ans-5€
-            Fondation Cartier Pass -18€ - 50€
-            Gratuit pour:
-            Moins de 13 ans,
-            Laissez-passer annuel,
-            carte Icom, 
-            carte de presse, 
-            carte d'invalidité, 
-            Fondation Cartier Pass, 
+          <h2 class="infos__intertitre">Les tarifs</h2>
+          <p class="infos__texte">Plein tarif => 11€ <br>
+            Tarif réduit => 7,50€ <br>
+            Réduction 13 => 25 ans-5€ <br>
+            Fondation Cartier Pass => 18€ - 50€ <br>
+            Gratuit pour:<br>
+            Moins de 13 ans, <br>
+            Laissez-passer annuel, <br>
+            carte Icom, <br>
+            carte de presse, <br>
+            carte d'invalidité, <br>
+            Fondation Cartier Pass, <br>
             Etudiants </p>
         </div>
       </div>
+      </section>
     </main>
-      <footer>
-        <p>Venez découvrir l’exposition a la fondation cartier et suivre les actus sur nos réseaux.</p>
-        <a href="https://www.facebook.com/FondationCartier/?locale=fr_FR"><img src="/public/icon/facebook_black_logo_icon_147136.svg" alt="logo facebook"></a>
-        <a href="https://www.instagram.com/fondationcartier/?hl=fr"><img src="/public/icon/instagram_black_logo_icon_147122.svg" alt="logo instagram"></a>
-        <a href="/index.html"><img src="/public/icon/LOGO.svg" alt="Logo exposition Shigeru Ban"></a>
-    </footer>
+    <footer class="footer">
+      <p class="footer__texte">Venez découvrir l’exposition a la fondation cartier et suivre les actus sur nos réseaux.</p>
+      <a href="https://www.facebook.com/FondationCartier/?locale=fr_FR" class="footer__facebook"><img src="/public/icon/facebook_black_logo_icon_147136.svg" alt="logo facebook"></a>
+      <a href="https://www.instagram.com/fondationcartier/?hl=fr" class="footer__instagram"><img src="/public/icon/instagram_black_logo_icon_147122.svg" alt="logo instagram"></a>
+      <a href="/index.html" class="footer__logo"><img src="/public/icon/LOGO.svg" alt="Logo exposition Shigeru Ban"></a>
+  </footer>
 </body>
 </html>
