liens vers googl maps

--- a/infos.html
+++ b/infos.html
@@ -36,7 +36,7 @@
     <div>
         <div role="tabpanel" x-bind:class="{actif: ouvert === 1}" >
           <h2 class="infos__intertitre">Le lieu</h2>
-          <a href="#"><img src="/public/img/infos.webp" alt="photo montrant le lieu sur une carte"></a>
+          <a href="https://www.google.fr/maps/place/Fondation+Cartier+pour+l'art+contemporain/@48.8372917,2.3319151,17z/data=!3m2!4b1!5s0x47e671c7e69bcee9:0x131b1f73dbdf28c4!4m6!3m5!1s0x47e671c80c12b47d:0x225ddbf564cf5d5a!8m2!3d48.8372917!4d2.3319151!16s%2Fm%2F047mkrs?entry=ttu"><img src="/public/img/infos.webp" alt="photo montrant le lieu sur une carte"></a>
           <p class="infos__texte">Fondation Cartier, 261 Bd Raspail, 75014 Paris</p>
         </div>
         <div role="tabpanel" x-bind:class="{actif: ouvert === 2}">
