--- a/billetterie.html
+++ b/billetterie.html
@@ -22,13 +22,15 @@
           </ul>
     </header>
     <main>
-    <h2>Prenez votre ticket directement en ligne </h2>
+    <section class="section__marrons">
+        <h2 class="title__billetterie">Prenez votre ticket directement en ligne </h2>
+    </section>    
 </main>
-    <footer>
-        <p>Venez découvrir l’exposition a la fondation cartier et suivre les actus sur nos réseaux.</p>
-        <a href="https://www.facebook.com/FondationCartier/?locale=fr_FR"><img src="/public/icon/facebook_black_logo_icon_147136.svg" alt="logo facebook"></a>
-        <a href="https://www.instagram.com/fondationcartier/?hl=fr"><img src="/public/icon/instagram_black_logo_icon_147122.svg" alt="logo instagram"></a>
-        <a href="/index.html"><img src="/public/icon/LOGO.svg" alt="Logo exposition Shigeru Ban"></a>
-    </footer>
+<footer class="footer">
+    <p class="footer__texte">Venez découvrir l’exposition a la fondation cartier et suivre les actus sur nos réseaux.</p>
+    <a href="https://www.facebook.com/FondationCartier/?locale=fr_FR" class="footer__facebook"><img src="/public/icon/facebook_black_logo_icon_147136.svg" alt="logo facebook"></a>
+    <a href="https://www.instagram.com/fondationcartier/?hl=fr" class="footer__instagram"><img src="/public/icon/instagram_black_logo_icon_147122.svg" alt="logo instagram"></a>
+    <a href="/index.html" class="footer__logo"><img src="/public/icon/LOGO.svg" alt="Logo exposition Shigeru Ban"></a>
+</footer>
 </body>
 </html>
