class + création page

--- a/shigeru-Ban.html
+++ b/shigeru-Ban.html
@@ -23,33 +23,33 @@
     </header>
 <main>
     <section>
-        <h2>Shigeru Ban</h2>
+        <h2 class="Ban__Titre">Shigeru Ban</h2>
         <img src="/public/img/shigeruBan.webp" alt="photo de shigeru Ban">
-        <p>Shigeru Ban</p>
+        <p class="légende">Shigeru Ban</p>
         <article>
-            <h3>Shigeru Ban : Entre Innovation et Durabilité</h3>
-            <p>L'univers fascinant de l'architecture contemporaine est marqué par des esprits créatifs et visionnaires qui repoussent les limites de la conception architecturale. Parmi eux, l'architecte japonais Shigeru Ban se distingue par son approche novatrice, son engagement envers la durabilité et sa capacité à créer des espaces uniques qui transcendent les frontières traditionnelles.
+            <h3 class="Ban__intertitre">Shigeru Ban : Entre Innovation et Durabilité</h3>
+            <p classe="Ban__texet">L'univers fascinant de l'architecture contemporaine est marqué par des esprits créatifs et visionnaires qui repoussent les limites de la conception architecturale. Parmi eux, l'architecte japonais Shigeru Ban se distingue par son approche novatrice, son engagement envers la durabilité et sa capacité à créer des espaces uniques qui transcendent les frontières traditionnelles.
                 C'est avec un immense plaisir que nous vous convions à explorer l'univers exceptionnel de Shigeru Ban au sein de notre exposition exclusive “l’art de Shegeru Ban”. Cette exposition captivante sera une plongée profonde dans le monde de l'architecte, mettant en lumière ses œuvres emblématiques et sa philosophie visionnaire.</p>
         </article>
         <article>
-            <h3>Un Pionnier de l'Architecture Innovante</h3>
-            <p> Shigeru Ban est reconnu à l'échelle mondiale pour son approche novatrice et son utilisation unique de matériaux peu conventionnels. Il est notamment célèbre pour ses structures en carton, une idée révolutionnaire qui démontre comment des matériaux simples peuvent être utilisés de manière sophistiquée pour créer des espaces fonctionnels et esthétiques. L'exposition présentera des maquettes, des dessins et des photographies illustrant cette approche distinctive qui caractérise le travail de Shigeru Ban. </p>
+            <h3 class="Ban__intertitre">Un Pionnier de l'Architecture Innovante</h3>
+            <p classe="Ban__texet"> Shigeru Ban est reconnu à l'échelle mondiale pour son approche novatrice et son utilisation unique de matériaux peu conventionnels. Il est notamment célèbre pour ses structures en carton, une idée révolutionnaire qui démontre comment des matériaux simples peuvent être utilisés de manière sophistiquée pour créer des espaces fonctionnels et esthétiques. L'exposition présentera des maquettes, des dessins et des photographies illustrant cette approche distinctive qui caractérise le travail de Shigeru Ban. </p>
         </article>
         <article>
-            <h3>L'Engagement envers la Durabilité</h3>
-            <p>Au-delà de l'innovation, Shigeru Ban est également loué pour son engagement indéfectible envers la durabilité. L'exposition explorera en détail ses projets emblématiques axés sur la durabilité, tels que ses structures temporaires construites en utilisant des matériaux recyclés, ainsi que ses efforts pour concevoir des bâtiments à faible impact environnemental. Les visiteurs auront l'occasion d'apprécier comment l'architecte intègre des considérations environnementales dans chaque phase de ses projets, créant ainsi un héritage durable dans le domaine de l'architecture.</p>
+            <h3 class="Ban__intertitre">L'Engagement envers la Durabilité</h3>
+            <p classe="Ban__texet">Au-delà de l'innovation, Shigeru Ban est également loué pour son engagement indéfectible envers la durabilité. L'exposition explorera en détail ses projets emblématiques axés sur la durabilité, tels que ses structures temporaires construites en utilisant des matériaux recyclés, ainsi que ses efforts pour concevoir des bâtiments à faible impact environnemental. Les visiteurs auront l'occasion d'apprécier comment l'architecte intègre des considérations environnementales dans chaque phase de ses projets, créant ainsi un héritage durable dans le domaine de l'architecture.</p>
         </article>
         <article>
-            <h3>Un Voyage à Travers les Réalisations Majeures</h3>
-            <p>L'exposition ne manquera pas de mettre en avant les réalisations majeures de Shigeru Ban à travers le monde. Des bâtiments emblématiques aux ponts innovants, chaque projet sera présenté de manière immersive, offrant aux visiteurs une expérience visuelle et informative. Des installations interactives et des projections audiovisuelles donneront vie aux projets de l'architecte, permettant aux visiteurs de plonger au cœur de son processus créatif.</p>
+            <h3 class="Ban__intertitre">Un Voyage à Travers les Réalisations Majeures</h3>
+            <p classe="Ban__texet">L'exposition ne manquera pas de mettre en avant les réalisations majeures de Shigeru Ban à travers le monde. Des bâtiments emblématiques aux ponts innovants, chaque projet sera présenté de manière immersive, offrant aux visiteurs une expérience visuelle et informative. Des installations interactives et des projections audiovisuelles donneront vie aux projets de l'architecte, permettant aux visiteurs de plonger au cœur de son processus créatif.</p>
         </article>
     </section>
 </main>
-    <footer>
-        <p>Venez découvrir l’exposition a la fondation cartier et suivre les actus sur nos réseaux.</p>
-        <a href="https://www.facebook.com/FondationCartier/?locale=fr_FR"><img src="/public/icon/facebook_black_logo_icon_147136.svg" alt="logo facebook"></a>
-        <a href="https://www.instagram.com/fondationcartier/?hl=fr"><img src="/public/icon/instagram_black_logo_icon_147122.svg" alt="logo instagram"></a>
-        <a href="/index.html"><img src="/public/icon/LOGO.svg" alt="Logo exposition Shigeru Ban"></a>
-    </footer>
+<footer class="footer">
+    <p class="footer__texte">Venez découvrir l’exposition a la fondation cartier et suivre les actus sur nos réseaux.</p>
+    <a href="https://www.facebook.com/FondationCartier/?locale=fr_FR" class="footer__facebook"><img src="/public/icon/facebook_black_logo_icon_147136.svg" alt="logo facebook"></a>
+    <a href="https://www.instagram.com/fondationcartier/?hl=fr" class="footer__instagram"><img src="/public/icon/instagram_black_logo_icon_147122.svg" alt="logo instagram"></a>
+    <a href="/index.html" class="footer__logo"><img src="/public/icon/LOGO.svg" alt="Logo exposition Shigeru Ban"></a>
+</footer>
 </body>
 </html>
