stle css de la page Ban (architecte)

--- a/shigeru-Ban.html
+++ b/shigeru-Ban.html
@@ -22,9 +22,9 @@
           </ul>
     </header>
 <main>
-    <section>
+    <section class="section">
         <h2 class="Ban__Titre">Shigeru Ban</h2>
-        <img src="/public/img/shigeruBan.webp" alt="photo de shigeru Ban">
+        <img class="Ban__img" src="/public/img/shigeruBan.webp" alt="photo de shigeru Ban">
         <p class="légende">Shigeru Ban</p>
         <article>
             <h3 class="Ban__intertitre">Shigeru Ban : Entre Innovation et Durabilité</h3>
