fin de la premiere page batiments

--- a/Ponpidou.html
+++ b/Ponpidou.html
@@ -58,7 +58,7 @@
         </article>
     </section> 
     <section class="section__marrons">
-        <h3 class="Batiment__retour">Retour vers les Oeuvres </h3>
+        <a href="/Oeuvres.html" class="Batiment__retour">Retour vers les Oeuvres </a>
     </section> 
 </main> 
 <footer class="footer">
