page église css

--- a/cathedral.html
+++ b/cathedral.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,19 +7,60 @@
     <link rel="stylesheet" href="src/css/style.css" />
 </head>
 <body>
-    <header>
+    <header class="header">
         <a href="/index.html">
-            <img src="/public/icon/LOGO.svg" alt="Logo Shigeru Ban">
+            <img src="/public/icon/LOGO.svg" alt="Logo Shigeru Ban" class="header-logo">
         </a>
-        <button>
-            <span></span>
-          </button>
-          <ul >
-            <li><a href="/infos.html" >Infos</a></li>
-            <li><a href="/billetterie.html" >Billetterie</a></li>
-            <li><a href="/shigeru-Ban.html" >Shigeru Ban</a></li>
-            <li><a href="/Oeuvres.html" >Oeuvres</a></li>
-          </ul>
+        <div class="dropdown"> 
+            <button class="dropbtn">
+                <img src="/public/icon/menu-blanc.svg" alt="Menu">
+            </button>
+            <nav class="dropdown-content">
+                <ul class="menu">
+                    <li><a href="/infos.html" class="menu_texte">Infos</a></li>
+                    <li><a href="/billetterie.html" class="menu_texte">Billetterie</a></li>
+                    <li><a href="/shigeru-Ban.html" class="menu_texte" >Shigeru Ban</a></li>
+                    <li><a href="/Oeuvres.html" class="menu_texte">Oeuvres</a></li>
+                </ul>
+                <a href="#menu">
+                    <img src="/public/icon/croix-menu-marron.svg" alt="croix-menu-marron" class="close">
+                </a>
+            </nav>
+        </div>
     </header>
+<main>
+    <section class="section">
+        <h2 class="Batiment__Titre"> <strong>Cardboard Cathedral</strong></h2>
+        <article>
+            <img class="Batiment__img"  class="Batiment__img" src="/public/img/eglise/eglise.webp" alt="Vue intérieur de la Cardboard Cathedral">
+            <p class="légende">Vue intérieur de la Cardboard Cathedral</p>
+            <p class="Batiment_texte">Le tremblement de terre de Christchurch en février 2011 (magnitude 6,3) a infligé des dégâts dévastateurs à la cathédrale de Christchurch, symbole de la ville.</p>
+        </article>
+        <article>
+            <img class="Batiment__img" src="/public/img/eglise/eglise2.webp" alt="Image des vitraux de la cathédral">
+            <p class="légende">Image des vitraux de la cathédral</p>
+            <p  class="Batiment_texte">Face à cette situation, il a été demandé à l’équipe et l’architecte Shigeru Ban de concevoir une nouvelle cathédrale provisoire.</p>
+        </article>
+        <article>
+            <img class="Batiment__img" src="/public/img/eglise/eglise3.webp" alt="Vue extérieur de la cathédral avant rénovation">
+            <p class="légende">Vue extérieur de la cathédral avant rénovation</p>
+        </article>
+        <h3 class="Batiment__intertitre">Une fabrication hors norme </h3>
+        <article>
+            <p class="Batiment_texte">Des tubes en papier de longueur égale et des conteneurs d'expédition de 20 pieds forment la forme triangulaire. Puisque la géométrie est déterminée par le plan et les élévations de la cathédrale d’origine, chaque angle des tubes de papier change progressivement. </p>
+            <img class="Batiment__img" src="/public/img/eglise/eglise4.webp" alt="Vue extérieur de nuit">
+            <p class="légende">Vue extérieur de nuit</p>
+            <p class="Batiment_texte"> Cette cathédrale, d'une capacité de 700 personnes, peut être utilisée comme espace événementiel et espace de concert.</p>
+        </article>
+    </section> 
+    <section class="section__marrons">
+        <a href="/Oeuvres.html" class="Batiment__retour">Retour vers les Oeuvres </a>
+    </section> 
+</main> 
+<footer class="footer">
+    <p class="footer__texte">Venez découvrir l’exposition a la fondation cartier et suivre les actus sur nos réseaux.</p>
+    <a href="https://www.facebook.com/FondationCartier/?locale=fr_FR" class="footer__facebook"><img src="/public/icon/facebook_black_logo_icon_147136.svg" alt="logo facebook"></a>
+    <a href="https://www.instagram.com/fondationcartier/?hl=fr" class="footer__instagram"><img src="/public/icon/instagram_black_logo_icon_147122.svg" alt="logo instagram"></a>
+    <a href="/index.html" class="footer__logo"><img src="/public/icon/logo-footer.svg" alt="Logo exposition Shigeru Ban"></a>
+</footer>
 </body>
-</html>
