--- a/hotel.html
+++ b/hotel.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,19 +7,59 @@
     <link rel="stylesheet" href="src/css/style.css" />
 </head>
 <body>
-    <header>
+    <header class="header">
         <a href="/index.html">
-            <img src="/public/icon/LOGO.svg" alt="Logo Shigeru Ban">
+            <img src="/public/icon/LOGO.svg" alt="Logo Shigeru Ban" class="header-logo">
         </a>
-        <button>
-            <span></span>
-          </button>
-          <ul >
-            <li><a href="/infos.html" >Infos</a></li>
-            <li><a href="/billetterie.html" >Billetterie</a></li>
-            <li><a href="/shigeru-Ban.html" >Shigeru Ban</a></li>
-            <li><a href="/Oeuvres.html" >Oeuvres</a></li>
-          </ul>
+        <div class="dropdown"> 
+            <button class="dropbtn">
+                <img src="/public/icon/menu-blanc.svg" alt="Menu">
+            </button>
+            <nav class="dropdown-content">
+                <ul class="menu">
+                    <li><a href="/infos.html" class="menu_texte">Infos</a></li>
+                    <li><a href="/billetterie.html" class="menu_texte">Billetterie</a></li>
+                    <li><a href="/shigeru-Ban.html" class="menu_texte" >Shigeru Ban</a></li>
+                    <li><a href="/Oeuvres.html" class="menu_texte">Oeuvres</a></li>
+                </ul>
+                <a href="#menu">
+                    <img src="/public/icon/croix-menu-marron.svg" alt="croix-menu-marron" class="close">
+                </a>
+            </nav>
+        </div>
     </header>
+<main>
+    <section class="section">
+        <h2 class="Batiment__Titre"> <strong>ZEN Wellness SEINEI</strong></h2>
+        <article>
+            <img class="Batiment__img"  class="Batiment__img" src="/public/img/hotel/hotel.webp" alt="Vue globale de l'hotel ">
+            <p class="légende">Vue globale de l'hotel </p>
+            <p class="Batiment_texte">Il s'agit d'un projet de centre d'hébergement où les clients peuvent faire l'expérience du « zazen » sur un petit site luxuriant de l'île d'Awaji.</p>
+        </article>
+        <article>
+            <img class="Batiment__img" src="/public/img/hotel/hotel2.webp" alt="image de la structure extérieur">
+            <p class="légende">image de la structure extérieur</p>
+            <p  class="Batiment_texte">Il est situé sur une crête du site et le bâtiment a une extrémité plus courte de 7,2 m et une extrémité plus longue de 90 m. La moitié du bâtiment est suspendue par deux bases de colonnes en acier avec des vierendeel en bois au premier étage permettant une portée de 21 m et tout le deuxième étage sera un studio zazen. </p>
+        </article>
+        <article>
+            <img class="Batiment__img" src="/public/img/hotel/hotel3.webp" alt="Vue du mobilier de l'hotel">
+            <p class="légende">Vue du mobilier de l'hotel</p>
+        </article>
+        <article>
+            <p class="Batiment_texte">Un café avec une série de cadres en arc PHP et une cabane sont prévus pour une future utilisation affiliée.</p>
+            <img class="Batiment__img" src="/public/img/hotel/hotel4.webp" alt="image de la plateforme au dessus de l'hotel">
+            <p class="légende">image de la plateforme au dessus de l'hotel</p>
+        </article>
+    </section> 
+    <section class="section__marrons">
+        <a href="/Oeuvres.html" class="Batiment__retour">Retour vers les Oeuvres </a>
+    </section> 
+</main> 
+<footer class="footer">
+    <p class="footer__texte">Venez découvrir l’exposition a la fondation cartier et suivre les actus sur nos réseaux.</p>
+    <a href="https://www.facebook.com/FondationCartier/?locale=fr_FR" class="footer__facebook"><img src="/public/icon/facebook_black_logo_icon_147136.svg" alt="logo facebook"></a>
+    <a href="https://www.instagram.com/fondationcartier/?hl=fr" class="footer__instagram"><img src="/public/icon/instagram_black_logo_icon_147122.svg" alt="logo instagram"></a>
+    <a href="/index.html" class="footer__logo"><img src="/public/icon/logo-footer.svg" alt="Logo exposition Shigeru Ban"></a>
+</footer>
 </body>
 </html>
